# simplebench

./: CMakeLists.txt  Makefile  README.md
include/: ArgumentParser.h  BenchmarkConfig.h  BenchmarkStats.h  IOWorker.h  Utils.h
src/: ArgumentParser.cpp  BenchmarkConfig.cpp  BenchmarkStats.cpp  IOWorker.cpp  Utils.cpp  main.cpp
